# mananap-tbn

./: README.md  pyproject.toml  run.py
factories/: base_factory.py
tabulation/: __init__.py  config.py
tabulation/controllers/: admin_controller.py  criteria_controller.py  event_controller.py  event_score_controller.py  event_type_controller.py  judge_controller.py  organization_controller.py  organization_type_controller.py  participant_controller.py  participant_team_controller.py  participant_type_controller.py  role_controller.py  user_controller.py
tabulation/models/: db.py
tabulation/routes/: auth_routes.py  main_routes.py
tabulation/routes/generate_data/: data_routes.py
tabulation/utils/formatter/: format.py
tabulation/utils/functions/: access_restriction.py
tabulation/utils/sample_data/: fake_data.py
tests/: conftest.py  notes.md  test_routes_000_ping.py  test_routes_001_role.py  test_routes_002_organization_type.py  test_routes_003_organization.py  test_routes_004_user.py  test_routes_005_judge.py  test_routes_006_participant_team.py  test_routes_007_participant_type.py  test_routes_008_participant.py  test_routes_009_event_type.py  test_routes_010_event.py  test_routes_011_event_criteria.py  test_routes_012_event_judge.py  test_routes_013_event_participant.py  test_routes_014_event_score.py  test_tabulation.py
